@@ -1,76 +1,30 @@
 # Stick Hero Game
 
 ## Overview
+Stick Hero Game Project Introduction We have created a game inspired by Stick Hero using JavaFX and object-oriented programming (OOP) principles. Our game replicates the core mechanics of Stick Hero while incorporating our own creative elements.
 
-Stick Hero is a game that challenges players to extend a stick to cross a gap and collect cherries. The game features various elements, including different types of cherries, player controls, scoring system, and multiple controllers for different game screens.
+<img width="599" alt="291795392-2cda9c72-8124-4ee7-ab99-962c9bfc81e7" src="https://github.com/Ruchi-here/AP_Project/assets/122676573/0fbb44bc-f6ff-4042-bff9-85e357f08bbc">
 
-## Classes
+<img width="600" alt="291795680-49ccf957-0b14-4e0d-ae32-3643f0835c78" src="https://github.com/Ruchi-here/AP_Project/assets/122676573/0fec8bb1-f9d8-4b6a-bc30-76bc3d33f7ef">
 
-1. **BlueCherry**
-   - Description: Implements the cherry class, representing a blue cherry in the game.
+<img width="598" alt="291795758-5fe9a2fe-b113-46f5-8ad0-804cbbdcb920" src="https://github.com/Ruchi-here/AP_Project/assets/122676573/e10bd72f-dc9a-4495-95f9-91fc086f2a32">
+<img width="600" alt="291795817-19acb3b6-062a-43da-92c3-ecb7edb2f092" src="https://github.com/Ruchi-here/AP_Project/assets/122676573/74b8328c-c4b1-42a0-9fda-1ec61fceeab6">
 
-2. **Cherry Interface**
-   - Description: A class that defines the cherry interface, serving as a blueprint for cherry classes in the game.
+<img width="599" alt="291795890-fdeeb259-7c4b-45df-85d5-105e00aa65f4" src="https://github.com/Ruchi-here/AP_Project/assets/122676573/6c0ae3e7-a933-44d0-8b31-674f5505d6b7">
 
-3. **RedCherry**
-   - Description: Represents a red cherry in the game.
 
-4. **GameOverController**
-   - Description: Controller responsible for handling the game over screen.
+Game Summary This Project involves developing a complete game where a character named stick-hero navigates between platforms by extending a stick. Length of stick is variable and is controlled by the user. Along the way, the character can collect cherries as rewards while reaching the goal. Game Mechanics
 
-5. **MainPageController**
-   - Description: Controller responsible for managing the main page of the game.
-
-6. **MovementPlayer**
-   - Description: Class responsible for handling the movement of the player in the game.
-
-7. **PauseScreenController**
-   - Description: Controller responsible for managing the pause screen of the game.
-
-8. **Player**
-   - Description: Represents the player in the game.
-
-9. **PositionOfPlayer**
-   - Description: Class that stores the x and y positions of the player.
-
-10. **Controller**
-    - Description: Base class for all controllers in the game.
-
-11. **ShowGames**
-    - Description: A class that handles the display of games on the main page.
-
-12. **ShowGames.fxml**
-    - Description: An FXML file that defines the layout of the `ShowGames` class.
-
-## How to Play
-
-- **Extend Stick:** Press the SPACE key.
-- **Toggle Player's Flip:** Press the D key.
-- **Pause Game:** Press the P key.
-- **Resume Game:** Press the R key.
-
-## Features
-
-- **Score System:** The game tracks the player's score (scoreCounter), updating when the player collects red dots.
-- **Background Music:** JavaFX MediaPlayer is used to play background music.
-
-## Commands
-
-1. **Navigate to Your Project Directory:**
-   ```
-   cd path/to/your/project
-   ```
-
-2. **Compile the Java Code:**
-   ```
-   javac --module-path "path/to/javafx-sdk-xx/lib" --add-modules javafx.controls,javafx.fxml Controller.java
-   ```
-
-3. **Run the Java Program:**
-   ```
-   java --module-path "path/to/javafx-sdk-xx/lib" --add-modules javafx.controls,javafx.fxml com.example.game3.Controller
-   ```
-
-## Notes
-
-- Replace "path/to/javafx-sdk-xx" with the actual path to your JavaFX SDK.
+Character Control: Players can control stick-hero, maneuvering the character between platforms and extending a stick to bridge gaps between pillars.
+Multiple Pillars: Incorporate various pillars of differing widths to add complexity and challenge to the game.
+Reviving Feature: Implement a feature allowing the player to revive once by using a specific number of collected cherries. Deduct cherries upon revival.
+Precision Timing: Players must time the stick extension accurately to land on the next platform. Failure results in the character falling and the game ending.
+Reward Collection: Enable the character to collect cherries by flipping upside down while moving between platforms. These collected rewards contribute to the player's score.
+Scoring System: Design a scoring mechanism that encourages players to aim for higher scores by collecting more rewards.
+Progress Saving: Include an option for players to save their progress (last score, highest score, total cherries) during gameplay.
+Enhancements: Utilize graphics, sound effects, and animations to elevate the overall gaming experience. Notes We have used core concepts like Design patterns like singleton and Factory design, JUnit test cases, JavaFX and other OOPs concepts throughout this projects. Bonus Marks We have added multiple new features as bonus points. Below is the list:
+Reviving feature
+Variable size of platform
+Multithreading
+Additional Obstacle
+Jumping Feature CONTROLS Press SPACEBAR TO START EXTENDING THE STICK Press ENTER TO STOP THE EXTENSION While CHARACTER IS MOVING OVER THE STICK, PRESS SHIFT TO FLIP THE CHARACTER IN ORDER TO COLLECT THE CANDY BONUS COMMAND IMPLEMENTED- Press SPACEBAR TO START JUMPING WHILE OVER THE STICK AND PRESS ENTER TO STOP THE JUMP AND GET BACK OVER THE PLATFORM
